// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TheNavigationDrawer render TheNavigationDrawer with route /bydel/gamleoslo correctly 1`] = `
<aside
  class="navbar"
>
  <img
    alt="oslo-logo"
    class="oslo__logo"
    src=""
  />
   
  <button
    class="selectedSubpage"
  >
    Bydel Gamle Oslo
  </button>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link navigation-link--active"
      >
        <input
          id="checkbox-gamleoslo"
          type="checkbox"
          value="1"
        />
         
        <label
          class=""
          for="checkbox-gamleoslo"
        />
         
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="#/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          type="checkbox"
          value="2"
        />
         
        <label
          class=""
          for="checkbox-grunerlokka"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sagene"
          type="checkbox"
          value="3"
        />
         
        <label
          class=""
          for="checkbox-sagene"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          type="checkbox"
          value="4"
        />
         
        <label
          class=""
          for="checkbox-sthanshaugen"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          type="checkbox"
          value="5"
        />
         
        <label
          class=""
          for="checkbox-frogner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          type="checkbox"
          value="6"
        />
         
        <label
          class=""
          for="checkbox-ullern"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          type="checkbox"
          value="7"
        />
         
        <label
          class=""
          for="checkbox-vestreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          type="checkbox"
          value="8"
        />
         
        <label
          class=""
          for="checkbox-nordreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          type="checkbox"
          value="9"
        />
         
        <label
          class=""
          for="checkbox-bjerke"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          type="checkbox"
          value="10"
        />
         
        <label
          class=""
          for="checkbox-grorud"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          type="checkbox"
          value="11"
        />
         
        <label
          class=""
          for="checkbox-stovner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          type="checkbox"
          value="12"
        />
         
        <label
          class=""
          for="checkbox-alna"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          type="checkbox"
          value="13"
        />
         
        <label
          class=""
          for="checkbox-ostensjo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          type="checkbox"
          value="14"
        />
         
        <label
          class=""
          for="checkbox-nordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          type="checkbox"
          value="15"
        />
         
        <label
          class=""
          for="checkbox-sondrenordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
       
      <li
        class="navigation-link navigation-link__label-compare"
        id="sammenlign"
      >
        <a
          class="navigation-link__label"
          href="#/bydel/alle"
          id="sammenlign-href"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <!---->
  </nav>
</aside>
`;

exports[`TheNavigationDrawer renders TheNavigationDrawer correctly 1`] = `
<aside
  class="navbar"
>
  <img
    alt="oslo-logo"
    class="oslo__logo"
    src=""
  />
   
  <button
    class="selectedSubpage"
  >
    - Velg bydel -
  </button>
   
  <nav
    class="navigation"
    role="navigation"
  >
    <ul
      class="navigation-list"
    >
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-gamleoslo"
          type="checkbox"
          value="1"
        />
         
        <label
          class=""
          for="checkbox-gamleoslo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/gamleoslo"
          id="a-gamleoslo"
        >
          Bydel Gamle Oslo
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grunerlokka"
          type="checkbox"
          value="2"
        />
         
        <label
          class=""
          for="checkbox-grunerlokka"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grunerlokka"
          id="a-grunerlokka"
        >
          Bydel Grünerløkka
        </a>
      </li>
      <li
        class="navigation-link navigation-link--active"
      >
        <input
          id="checkbox-sagene"
          type="checkbox"
          value="3"
        />
         
        <label
          class=""
          for="checkbox-sagene"
        />
         
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="#/bydel/sagene"
          id="a-sagene"
        >
          Bydel Sagene
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sthanshaugen"
          type="checkbox"
          value="4"
        />
         
        <label
          class=""
          for="checkbox-sthanshaugen"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sthanshaugen"
          id="a-sthanshaugen"
        >
          Bydel St. Hanshaugen
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-frogner"
          type="checkbox"
          value="5"
        />
         
        <label
          class=""
          for="checkbox-frogner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/frogner"
          id="a-frogner"
        >
          Bydel Frogner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ullern"
          type="checkbox"
          value="6"
        />
         
        <label
          class=""
          for="checkbox-ullern"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ullern"
          id="a-ullern"
        >
          Bydel Ullern
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-vestreaker"
          type="checkbox"
          value="7"
        />
         
        <label
          class=""
          for="checkbox-vestreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/vestreaker"
          id="a-vestreaker"
        >
          Bydel Vestre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordreaker"
          type="checkbox"
          value="8"
        />
         
        <label
          class=""
          for="checkbox-nordreaker"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordreaker"
          id="a-nordreaker"
        >
          Bydel Nordre Aker
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-bjerke"
          type="checkbox"
          value="9"
        />
         
        <label
          class=""
          for="checkbox-bjerke"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/bjerke"
          id="a-bjerke"
        >
          Bydel Bjerke
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-grorud"
          type="checkbox"
          value="10"
        />
         
        <label
          class=""
          for="checkbox-grorud"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/grorud"
          id="a-grorud"
        >
          Bydel Grorud
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-stovner"
          type="checkbox"
          value="11"
        />
         
        <label
          class=""
          for="checkbox-stovner"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/stovner"
          id="a-stovner"
        >
          Bydel Stovner
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-alna"
          type="checkbox"
          value="12"
        />
         
        <label
          class=""
          for="checkbox-alna"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/alna"
          id="a-alna"
        >
          Bydel Alna
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-ostensjo"
          type="checkbox"
          value="13"
        />
         
        <label
          class=""
          for="checkbox-ostensjo"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/ostensjo"
          id="a-ostensjo"
        >
          Bydel Østensjø
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-nordstrand"
          type="checkbox"
          value="14"
        />
         
        <label
          class=""
          for="checkbox-nordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/nordstrand"
          id="a-nordstrand"
        >
          Bydel Nordstrand
        </a>
      </li>
      <li
        class="navigation-link"
      >
        <input
          id="checkbox-sondrenordstrand"
          type="checkbox"
          value="15"
        />
         
        <label
          class=""
          for="checkbox-sondrenordstrand"
        />
         
        <a
          class="navigation-link__label"
          href="#/bydel/sondrenordstrand"
          id="a-sondrenordstrand"
        >
          Bydel Søndre Nordstrand
        </a>
      </li>
       
      <li
        class="navigation-link navigation-link__label-compare"
        id="sammenlign"
      >
        <a
          class="navigation-link__label router-link-exact-active router-link-active"
          href="#/bydel/sagene"
          id="sammenlign-href"
        >
          Sammenlign bydeler
        </a>
      </li>
    </ul>
     
    <!---->
  </nav>
</aside>
`;
